--- a/1_intro.tex
+++ b/1_intro.tex
@@ -134,10 +134,12 @@ eliminating inessential inefficiencies like instruction supply, RF access, and p
 % 
 The downsides of specialization are its high non-recurring engineering cost and its inability to support a wide range of applications.
 % 
-Given the emerging nature of applications in the ULP domain, specialization is premature, so new ULP, energy-efficient, but highly-programmable architectures are needed.
+Given the emerging nature of applications in the ULP domain, specialization is premature.
+% 
+New energy-efficient, but highly-programmable architectures are needed.
 
 \subsubsection{Existing execution models are flawed}
-Furthermore, both fixed-function ASIC designs and COTS scalar designs assume a trade-off between programmability and energy-efficiency that may be questionable.
+Furthermore, the trade-off between programmability and energy-efficiency is not as pronounced as fixed-function ASIC designs and COTS scalar designs would lead one to believe.
 % 
 The fixed-function execution model of ASIC designs limits programmability, while the scalar execution model of COTS MCUs wastes significant energy.
 % 
