--- a/manic/manic.tex
+++ b/manic/manic.tex
@@ -1,4 +1,5 @@
-\chapter{MANIC: An energy-efficient, vector-dataflow co-processor}
+\chapter[MANIC: An energy-efficient, vector-dataflow co-processor]{\manic: An energy-efficient, vector-dataflow co-processor\raisebox{.3\baselineskip}{\normalsize\cref{manic:cite1}}}
+\footnotetext[1]{\label{manic:cite1}\cite{manic} G. Gobieski, A. Nagi, N. Serafin, M. M. Isgenc, N. Beckmann, and B. Lucia, ``Manic: A vector-dataflow architecture for ultra-low-power embedded systems,'' in MICRO, 2019.}
 \label{chapter:manic}
 
 \input{manic/floats}
