--- a/refs.bib
+++ b/refs.bib
@@ -10290,12 +10290,19 @@ numpages = {10}
 }
 
 @inproceedings{snafu,
-  title={Snafu: an ultra-low-power, energy-minimal CGRA-generation framework and architecture},
+  title={SNAFU: an ultra-low-power, energy-minimal CGRA-generation framework and architecture},
   author={Gobieski, Graham and Atli, Ahmet Oguz and Mai, Kenneth and Lucia, Brandon and Beckmann, Nathan},
   booktitle={2021 ACM/IEEE 48th Annual International Symposium on Computer Architecture (ISCA)},
   pages={1027--1040},
   year={2021},
   organization={IEEE}
+}
+
+@inproceedings{riptide,
+  title={RipTide: A programmable, energy-minimal dataflow compiler and architecture},
+  author={Gobieski, Graham and Ghosh, Souradip and Heule, Marijn and Mowry, Todd and Beckmann, Nathan and Lucia, Brandon},
+  booktitle={MICRO},
+  year={2022}
 }
 
 @article{aho-tr,
