--- a/riptide/riptide.tex
+++ b/riptide/riptide.tex
@@ -1,4 +1,5 @@
-\chapter{RipTide: a programmable, energy-minimal dataflow compiler and architecture}
+\chapter[RipTide: a programmable, energy-minimal dataflow compiler and architecture]{\riptide: a programmable, energy-minimal dataflow compiler and architecture\raisebox{.3\baselineskip}{\normalsize\cref{riptide:cite1}}}
+\footnotetext[1]{\label{riptide:cite1}\cite{riptide}G. Gobieski, S. Ghosh, M. Heule, T. Mowry, N. Beckmann, and B. Lucia, “RipTide: A programmable, energy-minimal dataflow compiler and architecture,” in MICRO, 2022}
 \label{chapter:riptide}
 
 \newcommand{\riptideraw}{RipTide}
