--- a/snafu/snafu.tex
+++ b/snafu/snafu.tex
@@ -1,4 +1,5 @@
-\chapter{SNAFU generates ULP CGRAs}
+\chapter[SNAFU generates ULP CGRAs]{SNAFU generates ULP CGRAs\raisebox{.3\baselineskip}{\normalsize\cref{snafu:cite1}}}
+\footnotetext[1]{\label{snafu:cite1}\cite{snafu} G. Gobieski, A. O. Atli, K. Mai, B. Lucia, and N. Beckmann, ``SNAFU: an ultra-low-power, energy-minimal CGRA-generation framework and architecture,'' in 2021 ACM/IEEE 48th Annual International Symposium on Computer Architecture (ISCA). IEEE, 2021, pp. 1027–1040.}
 \label{chapter:snafu}
 
 \newcommand{\snafuframe}{\snafu}
