--- a/sonic/sonic.tex
+++ b/sonic/sonic.tex
@@ -1,4 +1,6 @@
-\chapter{SONIC: Deploying DNNs on intermittent embedded devices}
+\chapter[SONIC: Deploying DNNs on intermittent embedded devices]{\sonic: Deploying DNNs on intermittent embedded devices\raisebox{.3\baselineskip}{\normalsize\cref{sonic:cite1}\cref{sonic:cite2}}}
+\footnotetext[1]{\label{sonic:cite1}\cite{Gobieski2018IntermittentDN} G. Gobieski, N. Beckmann, and B. Lucia, ``Intermittent deep neural network inference,'' in SysML, 2018.}
+\footnotetext[2]{\label{sonic:cite2}\cite{sonic} G. Gobieski, B. Lucia, and N. Beckmann, ``Intelligence beyond the edge: Inference on intermittent embedded systems,'' in ASPLOS, 2019.}
 \label{chapter:sonic}
 
 \newcommand{\metric}{IMpJ\xspace}
